Add point-in-time-safe feature engineering job on Spark/Scala