@@ -49,4 +49,39 @@ lands — nothing here is retrofitted to look cleaner than it was.
   re-run wasn't truncated first — reconciliation checks the actual table,
   independently, after the fact.
 
-(Further entries added as M2 onward land.)
+## M2 — feature engineering on Databricks
+
+- **`card1` as a proxy entity.** IEEE-CIS has no real customer/account ID.
+  Public work on this dataset commonly uses `card1` (sometimes combined with
+  more card/address fields) as a stand-in for "the same paying entity" —
+  used here as-is, single-field, documented rather than dressed up as a real
+  identifier.
+- **RANGE frames with a single ORDER BY column for every count/mean/stddev
+  feature.** Spark requires exactly one ORDER BY expression when a RANGE
+  frame boundary is a numeric offset (as opposed to `UNBOUNDED`/`CURRENT
+  ROW`). Ordering by `TransactionDT` alone means rows sharing the current
+  row's exact timestamp have offset 0 and are excluded by the frame's `-1`
+  upper bound regardless of physical row order — ties are handled correctly
+  without needing a tiebreaker column, which only a RANGE frame gives you.
+- **`entity_time_since_last_txn` is the one feature that isn't perfectly
+  tie-safe.** It's built on `lag()` over a ROW frame (not RANGE, since `lag`
+  needs a row position, not a value distance), ordered by
+  `(TransactionDT, TransactionID)` for determinism. If two transactions for
+  the same entity share an exact timestamp, this feature can report 0
+  seconds since a same-timestamp "predecessor" rather than treating them as
+  simultaneous. Documented rather than silently accepted; the dataset's
+  effectively-continuous amounts make exact-timestamp collisions rare in
+  practice, but it's a real limitation, not a hidden one.
+- **Local test JVM needs explicit `--add-opens` flags (`build.sbt`,
+  `Test / javaOptions`).** Only this machine's JDK 21/15 were available
+  locally (no JDK 8/11); Spark 3.5 needs the classic reflective-access opens
+  to run on Java 17+, which Databricks clusters set for you but a bare local
+  JVM doesn't. Verified: `sbt test` passes (7 tests) against a real local
+  Spark session, including the point-in-time leakage test.
+- **`main()` isn't the real entry point.** Databricks Community Edition
+  clusters don't accept submitted JARs and have no Jobs scheduling, so the
+  job runs as `FeatureEngineeringJob.run(spark, config)` from a notebook
+  cell. `main` exists to document the intended CLI shape and is what a paid
+  workspace with Jobs would actually invoke via `spark-submit`.
+
+(Further entries added as M3 onward land.)
